[package]
name = "http-server"
version = "0.1.0"
authors = ["3for <287494524@qq.com>"]

[dependencies]
hyper = { git = "https://github.com/cryptape/hyper.git", branch = "reuse_port" }
#hyper = "0.11.10"

tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"

net2 = "0.2"
ws = "0.7"

jsonrpc_types = { path = "../jsonrpc_types" }
util = { path = "../util" }
libproto = { path = "../libproto" }
error = { path = "../error" }

serde_json = "1.0"

unicase = "2.1.0"


[features]
